@@ -13,6 +13,7 @@ TASpring change log
 * New weapon tdf tag rgbcolor2, used to make laser weapon have diferent color at the center, defaults to white.
 * New weapon tdf tag corethickness, how thick the inner color of a laser is, this is a percentage value, default is 0.25
 * New weapon tdf tag laserflaresize, size of the flare for laser weapons, multiplier for thickness, default 15.
+* New weapon FBI tags, texture1, texture2, tilelength, scrollspeed, pulseSpeed.
 * tdf tag duration is used for laser weapons.
 * edgeEffectivness added for weapons
 - Added limited fuel settings for units (only work for aircrafts so far, need a good mechanism for refueling other stuff)
@@ -20,7 +21,8 @@ TASpring change log
 -  New fbi tag RefuelTime, how long time it takes to fully refuel the unit, default 5
 -  New fbi tag MinAirBasePower, minimum build power an airbase unit must have for the aircraft to land on it, default 0
 -  New fbi tag WeaponFuelUsage<1-16>, how much fuel in seconds that firing the weapon takes from the owning unit, default 0
--  New weapon FBI tags, texture1, texture2, tilelength, scrollspeed, pulseSpeed.
+-  New fbi tag SeismicDistance, give the unit a seismic sensor for detecting movement through the ground.
+-  New fbi tag SeismicSignature, The magnitude of seismic disturbance when this unit is moving, default sqrt(mass/100).
 - New COB "get"/"set" constant: 75 MAX_SPEED get/sets the max speed of the unit (multiplied with 64k)
 
 0.72b1
